# microserviceprofessor/server/api/controllers/professores/router.ts
@@ -3,4 +3,8 @@ import controller from './professorcontroller';
 
 export default express
     .Router()
-    .get('/', controller.all);
+    .get('/', controller.all)
+    .get('/:id', controller.getById)
+    .post('/', controller.post)
+    .put('/:id', controller.update)
+    .delete('/:id', controller.delete);
