# microserviceprofessor/server/common/api.yml
@@ -17,6 +17,27 @@ paths:
         200:
           description: Return all
           content: {}
+    post:
+      responses:
+        200:
+          description: Return all
+          content: {}
+    put:
+      responses:
+        200:
+          description: Return all
+          content: {}
+    delete:
+      responses:
+        200:
+          description: Return all
+          content: {}
+  /professores/{id}:
+    get:
+      responses:
+        200:
+          description: Return all
+          content: {}
   /examples:
     get:
       tags:
